--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -6,10 +6,10 @@
     line-height: 50px;
     padding: 0 35px 0 35px;
     font-size: 15px;
-    background-color: black;
+    // background-color: black;
     color: white;
     text-transform: uppercase;
-    font-family: 'Open Sans Condensed';
+    font-family: 'Open Sans';
     font-weight: bolder;
     border: none;
     cursor: pointer;
@@ -19,23 +19,24 @@
     &:hover {
       background-color: white;
       color: black;
-      border: 1px solid black;
+      // border: 1px solid black;
     }
   
     &.google-sign-in {
       background-color: #4285f4;
+      // text-align: center;
       color: white;
   
       &:hover {
         background-color: #357ae8;
-        border: none;
+        border: 2px solid black;
       }
     }
   
     &.inverted {
       background-color: white;
       color: black;
-      border: 1px solid black;
+      border: 2px solid black;
   
       &:hover {
         background-color: black;
